--- a/src/main/java/gui/NEWGUI.form
+++ b/src/main/java/gui/NEWGUI.form
@@ -49,12 +49,12 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="d77c5" class="javax.swing.JButton" binding="button1" default-binding="true">
+          <component id="d77c5" class="javax.swing.JButton" binding="createButton" default-binding="true">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Button"/>
+              <text value="Create"/>
             </properties>
           </component>
         </children>
